[package]
name = "jolt-sys"
version = "0.1.0+Jolt-5.0.0"
edition = "2021"

[features]
default = []

double-precision = []

object-layer-u32 = []

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
cc = { version = "1.0.94", features = ["parallel"] }
walkdir = "2.5.0"
anyhow = "1.0.82"
