[package]
name = "jolt"
version = "0.1.0+Jolt-5.0.0"
edition = "2021"

[features]
double-precision = ["jolt-sys/double-precision"]
object-layer-u32 = ["jolt-sys/object-layer-u32"]

[dependencies]
jolt-sys = { path = "../jolt-sys" }

[lints.clippy]
new_without_default = { level = "allow" }
too_many_arguments = { level = "allow" }
