[package]
name = "jolt"
description = "Safe(-ish) bindings to Jolt Physics"
version = "0.1.0+Jolt-5.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/jolt-rust"
edition = "2021"

[features]
double-precision = ["jolt-sys/double-precision"]
object-layer-u32 = ["jolt-sys/object-layer-u32"]

[dependencies]
jolt-sys = { version = "0.1.0", path = "../jolt-sys" }

[lints.clippy]
new_without_default = { level = "allow" }
too_many_arguments = { level = "allow" }
