[package]
name = "joltc-sys"
description = "Unsafe bindings to Jolt Physics using JoltC"
version = "0.3.0+Jolt-5.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/jolt-rust"
edition = "2021"

exclude = ["JoltC/JoltPhysics/Assets", "JoltC/JoltPhysics/TestFramework", "JoltC/JoltPhysics/Samples", "JoltC/JoltPhysics/UnitTests"]

[features]
default = []

# Changes all world coordinates to use f64 instead of 32 coordinates.
double-precision = []

# Changes ObjectLayer and related types to be u32 instead of u16.
object-layer-u32 = []

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
cc = { version = "1.0.94", features = ["parallel"] }
walkdir = "2.5.0"
anyhow = "1.0.69"

[dev-dependencies]
rand = "0.8.5"
