[package]
name = "rolt"
description = "Safe(-ish) bindings to Jolt Physics"
version = "0.2.0+Jolt-5.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/jolt-rust"
edition = "2021"

[features]
double-precision = ["joltc-sys/double-precision"]
object-layer-u32 = ["joltc-sys/object-layer-u32"]

[dependencies]
joltc-sys = { version = "0.2.0", path = "../joltc-sys" }

[lints.clippy]
new_without_default = { level = "allow" }
too_many_arguments = { level = "allow" }
