[package]
name = "rolt"
description = "Safe(-ish) bindings to Jolt Physics"
version = "0.3.1+Jolt-5.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/jolt-rust"
edition = "2021"

[features]
double-precision = ["joltc-sys/double-precision"]
object-layer-u32 = ["joltc-sys/object-layer-u32"]

[dependencies]
glam = "0.29.0"
joltc-sys = { version = "0.3.1", path = "../joltc-sys" }
paste = "1.0.15"

[lints.clippy]
new_without_default = { level = "allow" }
too_many_arguments = { level = "allow" }

# bindgen structs often have padding and we want to use ..zeroed() to catch
# those cases usually.
needless_update = { level = "allow" }
